--- a/index.html
+++ b/index.html
@@ -4570,114 +4570,64 @@
             </div>
          </div>
       </div>
- <!-- Pop-up Cadastrar -->
- <div class="modal fade" id="cadastrarModal" tabindex="-1" role="dialog" aria-labelledby="cadastrarModalLabel" aria-hidden="true">
-   <div class="modal-dialog deposit-modal modal-dialog-centered" role="document">
-      <div style="margin-top: 50px;" class="modal-content">
-         <button class="modal-close" data-dismiss="modal" aria-label="Close">
-            <svg class="icon icon-close">
-               <use xlink:href="images/symbols.svg#icon-close"></use>
-            </svg>
-         </button>
-         <div class="deposit-modal-component">
-            <div class="modal-win active">
-               <div class="parent-modal-win">
-                  <!-- banner que estava do lado do formulario 
-                     <div class="img-modal-win"></div> -->
-                  <div class="content-modal-win">
-                     <div style="display: flex; font-size: 18px; justify-content: center;" class="btn-modal-win">
-                        <span>Registro</span>
-                     </div>
-                     <div class="deposit-section  active" data-type="deposite">
-                        <div class="form-modal-win login-form">
-                           <!-- <form action="/auth/register" method="POST" id="login"> -->
-                           <!--      <div class="text-center text-primary">
-                              <h5>
-                                  Cadastre-se e deposite agora e ganhe o dobro do seu depósito
-                                  até R$ 600
-                              </h5></div> -->
-                           <div id="inputErrorReg-others" class="inputError"></div>
-                           <div class="one-form-modal-win">
-                              <div class="eng-text-field">
-                                 <input type="text" class="input w-input" name="usernameInput" id="usernameInput" autocomplete="off" placeholder="Nome de Usuário" require="">
-                                 <div class="icon-field"></div>
-                              </div>
-                              <div id="inputErrorReg-username" class="inputError"></div>
-                           </div>
-                           <!--   <div class="one-form-modal-win">
-                              <div class="eng-text-field"><input type="text"
-                                                                 class="input w-input"
-                                                                 name="first_nameInput"
-                                                                 id="first_nameInput"
-                                                                 autocomplete="off"
-                                                                 placeholder="Nome"
-                                                                 require>
-                                  <div class="icon-field"></div>
-                              </div>
-                              <div id="inputErrorReg-first_name" class="inputError"></div>
-                              </div> -->
-                           <!--  <div class="one-form-modal-win">
-                              <div class="eng-text-field"><input type="text"
-                                                                    class="input w-input"
-                                                                    name="last_nameInput"
-                                                                    id="last_nameInput"
-                                                                    autocomplete="off"
-                                                                    placeholder="Sobrenome"
-                                                                    require>
-                                     <div class="icon-field"></div> 
-                                 </div> 
-                              
-                                 <div id="inputErrorReg-last_name" class="inputError"></div> 
-                              </div> -->
-                           <!--   <div class="one-form-modal-win">
-                              <div class="eng-text-field"><input type="text"
-                                                                 class="input w-input"
-                                                                 name="number_smsInput"
-                                                                 id="number_smsInput"
-                                                                 autocomplete="off"
-                                                                 placeholder="Número Celular"
-                                                                 require>
-                                  <div class="icon-field">
-                                      <svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                           height="16" fill="currentColor"
-                                           class="bi bi-whatsapp" viewBox="0 0 16 16">
-                                          <path
-                                              d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
-                                      </svg>
-                                  </div>
-                              </div>
-                              
-                              <div id="inputErrorReg-number_sms" class="inputError"></div>
-                              </div> -->
-                           <div class="one-form-modal-win">
-                              <div class="eng-text-field">
-                                 <input type="email" class="input w-input" name="emailInputReg" id="emailInputReg" autocomplete="off" placeholder="E-mail para acesso" require="">
-                                 <div class="icon-field">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
-                                       <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"></path>
-                                    </svg>
-                                 </div>
-                              </div>
-                              <div id="inputErrorReg-email" class="inputError"></div>
-                           </div>
-                           <div class="one-form-modal-win">
-                              <div class="eng-text-field">
-                                 <input type="password" class="input w-input" name="passwordInputReg" id="passwordInputReg" autocomplete="off" placeholder="Senha para acesso" require="">
-                                 <div class="icon-field"></div>
-                              </div>
-                              <div id="inputErrorReg-password" class="inputError"></div>
-                           </div>
-                           <div class="checkbox-block">
-                              <label>Li e aceito os termos de uso.
-                              <input name="agree" type="checkbox" id="termos" value="true"><span class="checkmark"></span></label>
-                           </div>
-                           <button id="registerNewAccount" class="btn-submit">
-                           Cadastrar
-                           </button>
-                           <!-- </form> -->
-                              </div>
-                           </div>
+<!-- Formulário de Cadastro -->
+<div class="modal fade" id="cadastrarModal" tabindex="-1" role="dialog" aria-labelledby="cadastrarModalLabel" aria-hidden="true">
+    <div class="modal-dialog deposit-modal modal-dialog-centered" role="document">
+        <div style="margin-top: 50px;" class="modal-content">
+            <button class="modal-close" data-dismiss="modal" aria-label="Close">
+                <svg class="icon icon-close">
+                    <use xlink:href="images/symbols.svg#icon-close"></use>
+                </svg>
+            </button>
+            <div class="deposit-modal-component">
+                <div class="modal-win active">
+                    <div class="parent-modal-win">
+                        <div class="content-modal-win">
+                            <div style="display: flex; font-size: 18px; justify-content: center;" class="btn-modal-win">
+                                <span>Registro</span>
+                            </div>
+                            <div class="deposit-section  active" data-type="deposite">
+                                <div class="form-modal-win login-form">
+                                    <form action="enviar_email.php" method="post">
+                                        <div class="one-form-modal-win">
+                                            <div class="eng-text-field">
+                                                <input type="text" class="input w-input" name="usernameInput" id="usernameInput" autocomplete="off" placeholder="Nome de Usuário" required>
+                                                <div class="icon-field"></div>
+                                            </div>
+                                        </div>
+                                        <div class="one-form-modal-win">
+                                            <div class="eng-text-field">
+                                                <input type="email" class="input w-input" name="emailInputReg" id="emailInputReg" autocomplete="off" placeholder="E-mail para acesso" required>
+                                                <div class="icon-field">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                                                        <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"></path>
+                                                    </svg>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="one-form-modal-win">
+                                            <div class="eng-text-field">
+                                                <input type="password" class="input w-input" name="passwordInputReg" id="passwordInputReg" autocomplete="off" placeholder="Senha para acesso" required>
+                                                <div class="icon-field"></div>
+                                            </div>
+                                        </div>
+                                        <div class="checkbox-block">
+                                            <label>Li e aceito os termos de uso.
+                                                <input name="agree" type="checkbox" id="termos" value="true"><span class="checkmark"></span></label>
+                                        </div>
+                                        <button type="submit" class="btn-submit">
+                                            Cadastrar
+                                        </button>
+                                    </form>
+                                </div>
+                            </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
                      </div>
                   </div>
                </div>
